--- a/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
@@ -11,23 +11,30 @@
 
     var menuItems = new MenuItem[]
     {
-        new MenuItem { Link = OdkRoutes.Account.PersonalDetails(Model.Chapter), Text = "Personal details" },
+        new MenuItem 
+        { 
+            Link = OdkRoutes.Account.PersonalDetails(Model.Chapter), 
+            Text = "Personal details",
+            Children = new[]
+            {
+                new MenuItem { Link = OdkRoutes.Account.EmailAddressChange(Model.Chapter), Text = "Email address" },
+                new MenuItem { Link = OdkRoutes.Account.EmailPreferences(Model.Chapter), Text = "Email preferences" },
+                new MenuItem { Link = OdkRoutes.Account.Picture(Model.Chapter), Text = "Picture" }
+            }
+        },
         Model.Chapter == null 
             ? new MenuItem { Link = OdkRoutes.Account.Location(), Text = "Location" }
             : new MenuItem(),
         Model.Chapter != null
             ? new MenuItem { Link = OdkRoutes.Account.Profile(Model.Chapter), Text = "Profile" }
             : new MenuItem(),
-        new MenuItem { Link = OdkRoutes.Account.Picture(Model.Chapter), Text = "Picture" },
         Model.Chapter == null
             ? new MenuItem { Link = OdkRoutes.Account.Interests(), Text = "My interests" }
             : new MenuItem(),
         new MenuItem { Link = OdkRoutes.Account.Conversations(Model.Chapter), Text = "My conversations" },
         new MenuItem { Link = OdkRoutes.Account.Subscription(platform, Model.Chapter), Text = "My subscription" },
         new MenuItem { Link = OdkRoutes.Account.Payments(Model.Chapter), Text = "My payments" },
-        new MenuItem { Link = OdkRoutes.Account.EmailAddressChange(Model.Chapter), Text = "Email address" },
         new MenuItem { Link = OdkRoutes.Account.PasswordChange(Model.Chapter), Text = "Password" },
-        new MenuItem { Link = OdkRoutes.Account.EmailPreferences(Model.Chapter), Text = "Email preferences" },
         new MenuItem { Link = OdkRoutes.Account.Notifications(Model.Chapter), Text = "Notifications" },
         platform == PlatformType.DrunkenKnitwits
             ? new MenuItem()
@@ -42,20 +49,8 @@
 <div data-odk-component="_AccountMenu">
     @await Html.PartialAsync("Components/_SideMenu", new SideMenuViewModel
     {
+        Active = activeMenuItem,
+        CollapseAll = true,
         MenuItems = menuItems
     })
-
-    <div class="dropdown d-md-none">
-        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-            @activeMenuItem?.Text
-        </button>
-        <ul class="dropdown-menu">
-            @foreach (var menuItem in menuItems)
-            {
-                <li>
-                    <a class="dropdown-item" href="@menuItem.Link">@menuItem.Text</a>
-                </li>
-            }        
-        </ul>
-    </div>
 </div>
