--- a/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
@@ -23,7 +23,7 @@
         .ToList();
 }
 
-<p>Choose whether or not you want to receive the following:</p>
+<p>Choose whether or not you want to receive the following emails:</p>
 
 <form action="/account/emails" method="post">
     @*@Html.AntiForgeryToken()*@
