--- a/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/_AdminSideMenu.cshtml
@@ -121,8 +121,10 @@
     .ToArray();
 }
 
-@await Html.PartialAsync("Components/_SideMenu", new SideMenuViewModel
-{
-    MenuItems = menuItems,
-    Root = true
-})
+<div data-odk-component="_AdminSideMenu">
+    @await Html.PartialAsync("Components/_SideMenu", new SideMenuViewModel
+    {
+        MenuItems = menuItems,
+        Root = true
+    })
+</div>
