--- a/ODK.Web.Razor/Pages/Account/Account.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Account.cshtml
@@ -16,13 +16,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = "/Account",
         Content = 
             @<div>
-                <h2>Personal details</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Personal details")
                 <section class="section">
                     <form action="/Account/PersonalDetails" method="post">
                         @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel
