--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -12,13 +12,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = "/Account/Password/Change",
         Content = 
             @<div>
-                <h2>Change password</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Change password")
                 <section class="section">
                     @await Html.PartialAsync("Account/_ChangePasswordContent")
                 </section>
