--- a/ODK.Web.Razor/Pages/Account/Delete.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Delete.cshtml
@@ -13,13 +13,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Delete(null),
         Content = 
             @<div>
-                <h2>Delete account</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Delete account")
                 <section class="section">
                     @await Html.PartialAsync("Account/_DeleteAccountContent")
                 </section>
