--- a/ODK.Web.Razor/Pages/Account/Emails.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Emails.cshtml
@@ -16,16 +16,15 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.EmailPreferences(null),
         Content =
-    @<div>
-        <h2>Email preferences</h2>
-        <section class="section">
-            @await Html.PartialAsync("Account/_EmailPreferencesContent", viewModel)
-        </section>
-    </div>
+            @<div>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Email preferences")
+                <section class="section">
+                    @await Html.PartialAsync("Account/_EmailPreferencesContent", viewModel)
+                </section>
+            </div>
     })
 })
