--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -10,7 +10,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Forgotten password",
+    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Forgotten password"),
     Breadcrumbs = new[]
     {
         new MenuItem { Link = "/account/login", Text = "Login" },
