--- a/ODK.Web.Razor/Pages/Account/Interests.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Interests.cshtml
@@ -16,13 +16,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Interests(),
         Content =
             @<div>
-                <h2>My interests</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "My interests")
                 <section class="section">
                     @await Html.PartialAsync("Account/_InterestsContent", viewModel)
                 </section>
