--- a/ODK.Web.Razor/Pages/Account/Issue.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Issue.cshtml
@@ -16,7 +16,7 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
+    TitleContent = await Html.PartialAsync("Components/_SideMenuPageTitle", "Account"),
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Issue(viewModel.Issue.Id),
