--- a/ODK.Web.Razor/Pages/Account/Issues.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Issues.cshtml
@@ -16,13 +16,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Issues(),
         Content =
             @<div>
-                <h2>My issues</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "My issues")
                 <section class="section">                    
                     @await Html.PartialAsync("Account/_IssuesContent", viewModel)
                 </section>
