--- a/ODK.Web.Razor/Pages/Account/Notifications.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Notifications.cshtml
@@ -16,13 +16,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Notifications(null),
         Content =
             @<div>
-                <h2>Notification preferences</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Notification preferences")
                 <section class="section">
                     @await Html.PartialAsync("Account/_NotificationsContent", viewModel)
                 </section>
