--- a/ODK.Web.Razor/Pages/Account/Payments.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Payments.cshtml
@@ -16,13 +16,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Payments(null),
         Content =
             @<div>
-                <h2>My payments</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "My payments")
                 <section class="section">
                     @await Html.PartialAsync("Account/_PaymentsContent", viewModel)
                 </section>
