--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -18,13 +18,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Picture(null),
         Content =
             @<div>
-                <h2>Picture</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Picture")
                 
                 <section class="section">
                     @await Html.PartialAsync("Account/_UpdatePictureContent", new UpdatePictureViewModel
