--- a/ODK.Web.Razor/Pages/Account/Subscription.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Subscription.cshtml
@@ -18,13 +18,12 @@
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = OdkRoutes.Account.Subscription(Model.Platform, null),
         Content =
             @<div>
-                <h2>My subscription</h2>
+                @await Html.PartialAsync("Components/_SideMenuPageTitle", "My subscription")
                 <section class="section">
                     @await Html.PartialAsync("Account/_SiteSubscriptionContent", viewModel)
                 </section>
