--- a/ODK.Web.Razor/Views/Shared/Account/_SiteAccountLayout.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_SiteAccountLayout.cshtml
@@ -11,7 +11,7 @@
                 Chapter = Model.Chapter
             })
         </div>
-        <div class="ps-md-5 pt-5 pt-md-0 flex-grow-1">        
+        <div class="ps-md-5 flex-grow-1">        
             @Model.Content.Invoke(null)
         </div>
     </div>
