--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Authorization
 @model ODK.Web.Razor.Pages.Account.ChangePasswordModel
 @{
-    Layout = "_AccountLayout";
+    Layout = "_HomeLayout";
     Model.Title = "Change password";
 }
 
@@ -15,9 +15,9 @@
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
         Active = "/Account/Password/Change",
+        Title = "Change password",
         Content = 
             @<div>
-                @await Html.PartialAsync("Components/_SideMenuPageTitle", "Change password")
                 <section class="section">
                     @await Html.PartialAsync("Account/_ChangePasswordContent")
                 </section>
